--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ li {
   border: 1px solid #7f7f7f;
   width: 100%;
   height: 0;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
 }
 
 .avatar {
@@ -96,28 +96,24 @@ i {
   margin-bottom: 1rem;
 }
 
-.skill1 span:last-child,
-.skill2 span:last-child,
-.skill8 span:last-child,
-.skill9 span:last-child {
+.skill4 span:last-child {
   background-color: #7f7f7f;
 }
 
 .skill3 span:nth-child(5),
-.skill5 span:nth-child(5),
-.skill6 span:nth-child(5),
-.skill7 span:nth-child(5),
-.skill3 span:nth-child(6),
-.skill5 span:nth-child(6),
-.skill6 span:nth-child(6),
-.skill7 span:nth-child(6) {
+.skill3 span:nth-child(6) {
   background-color: #7f7f7f;
 }
 
-.skill4 span:nth-child(4),
-.skill4 span:nth-child(5),
-.skill4 span:nth-child(6) {
+.skill2 span:nth-child(4),
+.skill2 span:nth-child(5),
+.skill2 span:nth-child(6) {
   background-color: #7f7f7f;
+}
+
+/* experience */
+.experience p {
+  margin-top: 1rem;
 }
 
 /* certificates  */
